@@ -1,3 +1,7 @@
+2007-09-27  Sébastien Sablé  <sable@users.sourceforge.net>
+
+	* Sybase.py: Completed input type mapping
+
 2007-09-20  Sébastien Sablé  <sable@users.sourceforge.net>
 
 	* Corrected various compilation warnings (some linked to python
